# code_template

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.example  README.md  bitbucket-pipelines.yml.example  boot.sh  boot.sh.example  codecov.yml  config.py  docker-compose.debug.yml  docker-compose.debug.yml.example  docker-compose.yml  docker-compose.yml.example  flask_new.py  pyproject.toml  requirements.in  requirements.txt  requirements.unittest.txt  tox.ini
.circleci/: config.yml
.github/workflows/: python-app.yml
app/: __init__.py
app/api/: __init__.py  auth.py  tokens.py  users.py
app/errors/: __init__.py
app/main/: .gitignore  __init__.py  routes.py
app/model/: user.py
app/utils/: .gitignore  auth_token.py  constants.py  datatables.py  service.py
infra/: .my.cnf  README.md  code-template-ingress.yml  deployment.yml  mysql-deployment.yml  persistent-volume.yml.txt  prometheus.yml  secrets.yml  service.yml
my-cluster/flux-system/: gotk-sync.yaml
scripts/: unittest.start.sh
tests/: flask_test_helpers.py  mocks.py  test_mock_server.py  test_real_server.py  test_todo.py  todos_not_class_based.py
