[tool.poetry]
name = "flask_new"
version = "0.1.0"
description = ""
authors = ["Timothy Kasenge <kasenget@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.9.4"
asn1crypto = "1.5.1"
astroid = "2.14.2"
atomicwrites = "1.4.1"
attrs = "22.2.0"
autopep8 = "2.0.1"
babel = "2.11.0"
build = "0.10.0"
cachetools = "5.3.0"
certifi = "2022.12.7"
cffi = "1.15.1"
cfgv = "3.3.1"
chardet = "5.1.0"
charset-normalizer = "3.0.1"
click = "8.1.3"
colorama = "0.4.6"
coverage = "7.1.0"
cryptography = "39.0.1"
dill = "0.3.6"
distlib = "0.3.6"
exceptiongroup = "1.1.0"
filelock = "3.9.0"
flask = "2.2.3"
flask-babel = "3.0.1"
flask-httpauth = "4.7.0"
flask-login = "0.6.2"
flask-migrate = "4.0.4"
flask-moment = "1.0.5"
flask-sqlalchemy = "3.0.3"
greenlet = "2.0.2"
identify = "2.5.17"
idna = "3.4"
importlib-metadata = "6.0.0"
importlib-resources = "5.12.0"
iniconfig = "2.0.0"
isort = "5.12.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
lazy-object-proxy = "1.9.0"
mako = "1.2.4"
markupsafe = "2.1.2"
mccabe = "0.7.0"
more-itertools = "9.0.0"
nodeenv = "1.7.0"
packaging = "23.0"
pip-tools = "6.12.2"
platformdirs = "3.0.0"
pluggy = "1.0.0"
pre-commit = "3.0.4"
protobuf = "4.22.0"
py = "1.11.0"
pycodestyle = "2.10.0"
pycparser = "2.21"
pyjwt = "2.6.0"
pylint = "2.16.2"
pymysql = "1.0.2"
pyparsing = "3.0.9"
pyproject-api = "1.5.0"
pyproject-hooks = "1.0.0"
pytest = "7.2.1"
python-dateutil = "2.8.2"
python-dotenv = "0.21.1"
python-editor = "1.0.4"
pytz = "2022.7.1"
pyyaml = "6.0"
requests = "2.28.2"
six = "1.16.0"
sqlalchemy = "2.0.4"
toml = "0.10.2"
tomli = "2.0.1"
tomlkit = "0.11.6"
tox = "4.4.5"
typed-ast = "1.5.4"
typing-extensions = "4.5.0"
urllib3 = "1.26.14"
virtualenv = "20.19.0"
werkzeug = "2.2.3"
wheel = "0.38.4"
wrapt = "1.14.1"
zipp = "3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
