[tool.poetry]
name = "flask_new"
version = "0.1.0"
description = ""
authors = ["Timothy Kasenge <kasenget@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.12.1"
asn1crypto = "^1.5.1"
astroid = "^2.15.8"
atomicwrites = "^1.4.1"
attrs = "^22.2.0"
autopep8 = "^2.0.4"
babel = "^2.13.1"
build = "^0.10.0"
cachetools = "^5.3.2"
certifi = "^2023.7.22"
cffi = "^1.16.0"
cfgv = "^3.4.0"
chardet = "^5.2.0"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
colorama = "^0.4.6"
coverage = "^7.3.2"
cryptography = "^39.0.2"
dill = "^0.3.7"
distlib = "^0.3.7"
exceptiongroup = "^1.2.0"
filelock = "^3.13.1"
flask = "^2.3.3"
flask-babel = "^3.1.0"
flask-httpauth = "^4.8.0"
flask-login = "^0.6.3"
flask-migrate = "^4.0.5"
flask-moment = "^1.0.5"
flask-sqlalchemy = "^3.1.1"
greenlet = "^2.0.2"
identify = "^2.5.32"
idna = "^3.4"
importlib-metadata = "^6.8.0"
importlib-resources = "^5.13.0"
iniconfig = "^2.0.0"
isort = "^5.12.0"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
lazy-object-proxy = "^1.9.0"
mako = "^1.3.0"
markupsafe = "^2.1.3"
mccabe = "^0.7.0"
more-itertools = "^9.1.0"
nodeenv = "^1.8.0"
packaging = "^23.2"
pip-tools = "^6.14.0"
platformdirs = "^3.11.0"
pluggy = "^1.3.0"
pre-commit = "^3.5.0"
protobuf = "^4.25.1"
py = "^1.11.0"
pycodestyle = "^2.11.1"
pycparser = "^2.21"
pyjwt = "^2.8.0"
pylint = "^2.17.7"
pymysql = "^1.1.0"
pyparsing = "^3.1.1"
pyproject-api = "^1.6.1"
pyproject-hooks = "^1.0.0"
pytest = "^7.4.3"
python-dateutil = "^2.8.2"
python-dotenv = "^0.21.1"
python-editor = "^1.0.4"
pytz = "^2022.7.1"
pyyaml = "^6.0.1"
requests = "^2.31.0"
six = "^1.16.0"
sqlalchemy = "^2.0.23"
toml = "^0.10.2"
tomli = "^2.0.1"
tomlkit = "^0.11.8"
tox = "^4.11.3"
typed-ast = "^1.5.5"
typing-extensions = "^4.8.0"
urllib3 = "^1.26.18"
virtualenv = "^20.24.7"
werkzeug = "^2.3.8"
wheel = "^0.38.4"
wrapt = "^1.16.0"
zipp = "^3.17.0"
blinker = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
